
  * New upstream release.
    - New version 2 protocol with automatic down-negotiation to the old
      protocol for backward compatibility.  Supports streaming output from
      the server, distinguishing between output streams, and persistant
      connections.
    - Don't consider inclusion of empty directories in a configuration
      file an error.
    - New protocol documentation.
  * Update standards version to 3.7.2 (no changes required).

 --

remctl (1.12-2) unstable; urgency=low

  * Don't assume "rule: export VARIABLE=value" works in debian/rules;
    instead, export the variable separate from the rule-specific setting.
    The make on at least one of the buildds didn't like this construct.

 -- Russ Allbery <rra@debian.org>  Sun,  1 Jan 2006 23:25:59 -0800

remctl (1.12-1) unstable; urgency=low

  * New upstream release.
    - Fix memory initialization bug in remctld configuration parsing.
  * Use DH_OPTIONS in debian/rules to avoid -i and -a clutter.

 -- Russ Allbery <rra@debian.org>  Sun,  1 Jan 2006 21:21:40 -0800

remctl (1.11-1) unstable; urgency=low

  * New upstream version.
    - remctl stops parsing arguments at the first non-option to make it
      easier to pass options to remote programs.
    - Include example of how to use remctl like rsh.  Thanks, Romain
      LENGLET.
    - Support include in ACL files.  (Closes: #309418)

 -- Russ Allbery <rra@debian.org>  Thu, 22 Dec 2005 16:43:59 -0800

remctl (1.10-1) unstable; urgency=low

  * New upstream version.
    - The -v verbose option is now -d (debug) for remctl and remctld.
    - Better and cleaner error reporting and logging.
    - Support linking with only the shared libraries called directly and
      relying on the shared libraries to pull in their own dependencies,
      reducing unnecessary package dependencies.
  * Build separate remctl-server and remctl-client packages (with a remctl
    transitional package for upgrades).
  * remctl-server now enables remctld by default.